tests/error/tensor_errors/poly_tensor.err
Guppy compilation failed. Error in file $FILE:14

12:    @guppy(module)
13:    def main() -> int:
14:        return (foo, foo)(42, 42)
                             ^^
GuppyTypeError: Expected argument of type `T`, got `int`
